add new website from server na

--- a/xem-phim-moi/diep-vien-sieu-lay-2/index.html
+++ b/xem-phim-moi/diep-vien-sieu-lay-2/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1781,18 +1781,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhung-co-gai-sat-thu" title="Những Cô Gái Sát Thủ">
+          <a class="list-top-movie-link" href="/phim-moi/cong-nghe-gen" title="Công Nghệ Gen">
            <span class="status">
-            HD Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-co-gai-sat-thu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cong-nghe-gen-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Những Cô Gái Sát Thủ
+             Công Nghệ Gen
             </span>
             <span class="list-top-movie-item-en">
-             Shadow of the Lotus
+             Gattaca
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/phi-vu-cuoi-cua-me" title="Phi vụ cuối của mẹ">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phi-vu-cuoi-cua-me-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Phi vụ cuối của mẹ
+            </span>
+            <span class="list-top-movie-item-en">
+             The Sleepover
             </span>
             <span class="list-top-movie-item-view">
              4 lượt xem
@@ -1803,18 +1825,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/loai-ac-doc-2" title="Loài Ác Độc 2">
+          <a class="list-top-movie-link" href="/phim-moi/truy-sat" title="Truy Sát">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/loai-ac-doc-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truy-sat-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Loài Ác Độc 2
+             Truy Sát
             </span>
             <span class="list-top-movie-item-en">
-             Species II
+             Prolonged Exposure
+            </span>
+            <span class="list-top-movie-item-view">
+             5 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/this-is-menow" title="This Is Me…Now">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/this-is-menow-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             This Is Me…Now
+            </span>
+            <span class="list-top-movie-item-en">
+             This Is Me…Now
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1825,62 +1869,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/the-mouse-trap" title="The Mouse Trap">
+          <a class="list-top-movie-link" href="/phim-moi/nu-khong-lo-xanh" title="Nữ Khổng Lồ Xanh">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-mouse-trap-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-khong-lo-xanh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             The Mouse Trap
+             Nữ Khổng Lồ Xanh
             </span>
             <span class="list-top-movie-item-en">
-             The Mouse Trap
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/qua-canh-tinh-yeu" title="Quá Cảnh Tình Yêu">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/qua-canh-tinh-yeu-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Quá Cảnh Tình Yêu
-            </span>
-            <span class="list-top-movie-item-en">
-             Love Transit
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhen-khong-lo-ke-phan-boi-sao-hoa" title="Nhện Khổng Lồ: Kẻ Phản Bội Sao Hỏa">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhen-khong-lo-ke-phan-boi-sao-hoa-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Nhện Khổng Lồ: Kẻ Phản Bội Sao Hỏa
-            </span>
-            <span class="list-top-movie-item-en">
-             Starship Troopers: Traitor Of Mars
+             She-Hulk: Attorney at Law
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
