add new website from server na

--- a/xem-phim-moi/diep-vien-sieu-lay/index.html
+++ b/xem-phim-moi/diep-vien-sieu-lay/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1661,21 +1661,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/phat-xit-duc" title="Phát Xít Đức">
+          <a class="list-top-movie-link" href="/phim-moi/barbie-skipper-and-the-big-babysitting-adventure" title="Barbie: Skipper and the Big Babysitting Adventure">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phat-xit-duc-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/barbie-skipper-and-the-big-babysitting-adventure-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Phát Xít Đức
+             Barbie: Skipper and the Big Babysitting Adventure
             </span>
             <span class="list-top-movie-item-en">
-             Living Space
+             Barbie: Skipper and the Big Babysitting Adventure
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1683,21 +1683,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hon-loan-san-khau-hai" title="Hỗn loạn sân khấu hài">
+          <a class="list-top-movie-link" href="/phim-moi/vendettaa" title="Vendettaa">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hon-loan-san-khau-hai-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vendettaa-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hỗn loạn sân khấu hài
+             Vendettaa
             </span>
             <span class="list-top-movie-item-en">
-             Comedy Chaos
+             Vendetta
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1705,18 +1705,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/giai-cuu-bong-da" title="Giải cứu bóng đá">
+          <a class="list-top-movie-link" href="/phim-moi/bump-of-chicken-tour-2019-aurora-ark-tokyo-dome" title="BUMP OF CHICKEN TOUR 2019 aurora ark TOKYO DOME">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giai-cuu-bong-da-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bump-of-chicken-tour-2019-aurora-ark-tokyo-dome-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Giải cứu bóng đá
+             BUMP OF CHICKEN TOUR 2019 aurora ark TOKYO DOME
             </span>
             <span class="list-top-movie-item-en">
-             The Soccer Football Movie
+             BUMP OF CHICKEN TOUR 2019 aurora ark TOKYO DOME
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1727,18 +1727,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/oan-gia-kiem-khach" title="Oan Gia Kiếm Khách">
+          <a class="list-top-movie-link" href="/phim-moi/hai-chang-ngoc" title="Hai Chàng Ngốc">
            <span class="status">
-            HD Lồng Tiếng
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/oan-gia-kiem-khach-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hai-chang-ngoc-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Oan Gia Kiếm Khách
+             Hai Chàng Ngốc
             </span>
             <span class="list-top-movie-item-en">
-             The Sentimental Swordsman
+             Dumb &amp; Dumber
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1749,21 +1749,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/truy-cau-cong-luc-duong-thanh-nhom-bong-ban-nam" title="Truy Cầu : Công Lực Dưỡng Thành Nhóm Bóng Bàn Nam">
+          <a class="list-top-movie-link" href="/phim-moi/black-raven" title="Black Raven">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truy-cau-cong-luc-duong-thanh-nhom-bong-ban-nam-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chornij-voron-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Truy Cầu : Công Lực Dưỡng Thành Nhóm Bóng Bàn Nam
+             Black Raven
             </span>
             <span class="list-top-movie-item-en">
-             Table Tennis Dream: Boys Team
+             Black Raven
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
